--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Image Gallery</title>
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
 </head>
 <body>
-  <!--List goes here-->
+  <main>
+    <div id="gallery"></div>
+  </main>
 </body>
 </html>
