--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Image Gallery</title>
-  <script src="./script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <script src="./js/script.js" defer></script>
 </head>
 <body>
-  <main>
+    <h1>Open Mail Gallery</h1>
+    <p>all <a href="https://undraw.co/illustrations">photos</a> reserved to <a href="https://undraw.co/license">unDraw</a></p>
     <div id="gallery"></div>
-  </main>
 </body>
 </html>
